--- a/Marlin/Marlin.csproj
+++ b/Marlin/Marlin.csproj
@@ -8,9 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Model\" />
-    <Folder Include="View\" />
-    <Folder Include="ViewModel\" />
+    <Folder Include="Views\" />
   </ItemGroup>
 
   <ItemGroup>
