--- a/Marlin/Marlin.csproj
+++ b/Marlin/Marlin.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Speech" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
